code smells fixed.